# cmake_demo

./: CMakeLists.txt  README.md  runhello.sh
lib/: CMakeLists.txt  hello.cpp  hello.h
share_lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
static_lib/: CMakeLists.txt
