PROJECT(hello)
MESSAGE(STATUS "this is binary dir ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "this is source dir ${PROJECT_SOURCE_DIR}")
#ADD_SUBDIRECTORY(share_lib)
#ADD_SUBDIRECTORY(static_lib)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src ${EXECUTABLE_OUTPUT_PATH})


INSTALL(FILES COPYRIGHT README DESTINATION share/doc/hello)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/hello)
